# text2error

./: pyproject.toml  readme.md
.github/workflows/: lint.yml  test.yml
